js262/test/language/comments/S7.4_A4_T1.js


/*---
info: Single and Multi line comments are used together
es5id: 7.4_A4_T1
description: Try use 2 close comment tags
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();


x*/
